--- a/apanel/css/style.css
+++ b/apanel/css/style.css
@@ -5393,6 +5393,17 @@ Main sidebar
 .fix-sidebar .left-sidebar {
   position: fixed; }
 
+.nav-unread {
+  position: absolute;
+  text-align: right;
+  float: right;
+  background: #cd201f;
+  text-indent: 30px;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+}
+
 /*******************
 use profile section
 ******************/
